--- a/app/src/main/res/layout/fragment_add_student.xml
+++ b/app/src/main/res/layout/fragment_add_student.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Modules.AddStudent.AddStudentActivity">
+    tools:context=".Modules.AddStudent.AddStudentFragment">
 
     <ImageView
         android:id="@+id/imageView"
